fixed padding issues on mobile devices

--- a/styles/Filter.module.css
+++ b/styles/Filter.module.css
@@ -46,4 +46,8 @@
     appearance: none;
 }
 
-
+@media (max-width: 720px) {
+    .sort{
+        margin: 0rem 0rem;
+    }
+}    
