--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -64,9 +64,12 @@
 }
 
 
-@media (max-width: 600px) {
+@media (max-width: 720px) {
   .grid {
     width: 100%;
     flex-direction: column;
+  }
+  .main{
+    padding: 0rem;
   }
 }
